--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,3 +14,6 @@ board = teensy40
 framework = arduino
 lib_deps = 
     waspinator/AccelStepper@^1.64
+build_flags = 
+    -I include
+    -I src/lib
