Switch to TinyGPS+ library and add signal quality tracking

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
     waspinator/AccelStepper@^1.64
     https://github.com/PaulStoffregen/ILI9341_t3
     https://github.com/PaulStoffregen/XPT2046_Touchscreen
+    mikalhart/TinyGPSPlus@^1.0.3
 build_flags = 
     -I include
