--- a/firmware-pico/platformio.ini
+++ b/firmware-pico/platformio.ini
@@ -15,6 +15,10 @@ framework = arduino
 lib_deps = 
     waspinator/AccelStepper@^1.64
     mikalhart/TinyGPSPlus@^1.0.3
+    adafruit/Adafruit ILI9341@^1.6.0
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/Adafruit BusIO@^1.16.1
+    https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
 upload_protocol = picotool
 build_flags = 
     -I include
