--- a/firmware-pico/platformio.ini
+++ b/firmware-pico/platformio.ini
@@ -9,17 +9,17 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:pico]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
+board_build.core = earlephilhower
 lib_deps = 
     waspinator/AccelStepper@^1.64
     mikalhart/TinyGPSPlus@^1.0.3
-    adafruit/Adafruit ILI9341@^1.6.0
-    adafruit/Adafruit GFX Library@^1.11.9
-    adafruit/Adafruit BusIO@^1.16.1
-    https://github.com/PaulStoffregen/XPT2046_Touchscreen.git
+    adafruit/Adafruit GFX Library@^1.11.11
+    adafruit/Adafruit ILI9341@^1.6.1
 upload_protocol = picotool
 build_flags = 
     -I include
+    
 monitor_speed = 115200
