Port to 160x80 ST7735 TFT display

--- a/firmware-pico/platformio.ini
+++ b/firmware-pico/platformio.ini
@@ -17,7 +17,7 @@ lib_deps =
     waspinator/AccelStepper@^1.64
     mikalhart/TinyGPSPlus@^1.0.3
     adafruit/Adafruit GFX Library@^1.11.11
-    adafruit/Adafruit ILI9341@^1.6.1
+    adafruit/Adafruit ST7735 and ST7789 Library@^1.10.6
 upload_protocol = picotool
 build_flags = 
     -I include
